# social-reaction-analysis-gr

./: .env.example  .gitignore  CLAUDE.md  README.md  Social Reaction DB.session.sql  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
_archive/frontend/: app.js  civic-data.js  index.html  style.css
_archive/scrapers/: README.md  base_scraper.py  config.py  run_all.py  scheduler.py
admin/: auth.py  config.py  db.py  main.py
admin/routes/: events.py  login.py
admin/templates/: base.html  event_edit.html  events.html  login.html
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_event_locations_enrich_columns.py  0003_articles_event_id_on_delete_set_null.py
api/: __init__.py  cache.py  config.py  db.py  main.py  models.py
api/routes/: events.py  health.py  stats.py
backend/api/: models.py
backend/llm/: classify.py  config.py  geocode.py  pipeline.py  (+1 more)
docs/: roadmap-new.md  roadmap.md  system-design.md
enrich/: __init__.py  classify.py  config.py  geocode.py  llm_client.py  pipeline.py  summarize.py
frontend/: app.js  index.html  style.css
ingestion/: __init__.py  config.py  db.py  models.py  run.py
nlp/: __init__.py  clustering.py  config.py  deduplication.py  embeddings.py  event_registry.py  pipeline.py
notebooks/: cluster_analytics.ipynb
scrapers/: README.md  config.py  run_all.py
tests/: conftest.py
web/: eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
worker/: archival.py  config.py  run.py
(+210 files in other folders)
