[project]
name = "social-reaction-analysis-gr"
version = "0.1.0"
description = "Real-time detection and visualisation of social reactions in Greece."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.6",
    # Phase 1 — Ingestion
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "googlenewsdecoder>=0.1",
    "selectolax>=0.3",
    "spacy>=3.7",
    "pyyaml>=6.0",
    # Phase 2 — NLP
    "sentence-transformers>=3.0",
    "hdbscan>=0.8",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "anyio[trio]>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "sqlalchemy[mypy]>=2.0",
    "respx>=0.21",
    "types-pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["_archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses Depends() in default args

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]